refactore application naming

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
                 </span>
                 <span>Projects</span>
             </li>
+            <li class="category" id="relTicketCategory">
+                <span class="material-icons icon">
+                    terminal
+                </span>
+                <span>REL Tickets</span>
+            </li>
         </ul>
     </div>
     <div id="content" class="content">
